# LSReader

./: CMakeLists.txt  README.md
include/: LSReader.h
src/: CMakeLists.txt  decompressor.cpp
test_data/: Logo_p.e5
tests/: CMakeLists.txt  LSReaderTest.cpp
